# peer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  peer-defaults.toml
src/: dispatch.rs  error.rs  lib.rs  main.rs  project.rs  registry.rs  session.rs  tools.rs
src/image/: cli.rs  gemini.rs  http.rs  minimax.rs  mod.rs  session.rs
src/video/: minimax.rs  mod.rs  session.rs  veo.rs
tests/: image_smoke.rs  integration_test.rs
