[package]
name = "peer"
description = "MCP server that dispatches prompts to peer LLM CLIs (codex/gemini/minimax/claude) and returns verdict-parsed output."
workspace = "../../rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "AGPL-3.0-or-later"
repository = "https://github.com/menot-you/peer"
homepage = "https://menot.sh"
readme = "README.md"
keywords = ["mcp", "llm", "cli", "review", "dispatch"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "peer_mcp"
path = "src/lib.rs"

[[bin]]
name = "peer-mcp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "time", "io-util", "fs"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
regex = "1"
dirs = "6"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
wiremock = "0.6"
